#27 Made ControllerTest to add new clothing-object
Co-authored-by: olejme <olejme@stud.ntnu.no>